# intraday_stock_direction_research

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_BUILD_LOG.md  NEXT_SESSION_BRIEF.md  NEXT_WINDOW_HANDOFF.md  PHASE_1B_PLAN.md  PHASE_1B_RESEARCH_HANDOFF.md  PHASE_1B_SESSION_CONTEXT.md  README.md  SPRINT_LOG.md  SPRINT_PLAN_HANDOFF.md  plan_v2_patches.md  pyproject.toml  pytest.ini  requirements.txt
configs/: data.yaml  pipeline.yaml
docs/: ARTIFACT_POLICY.md  AUTOMATED_AGENT_WORKFLOW_2026-05-24.md  BASELINE_REFERENCE.md  CODE_ORGANIZATION.md  CONFIG_SCREENING_FREEZE_2026-06-04.md  CONTROLLED_FOLLOWUP_PROTOCOL_2026-06-04.md  CRITICAL_REVIEW_2026-06-02.md  CRITICAL_REVIEW_ROUND3_2026-06-02.md  DIAGNOSTIC_H0_TABULAR_SWEEP_PROTOCOL_2026-06-04.md  ENVIRONMENT.md  EXTERNAL_METHOD_REVIEW_BACKLOG_2026-05-25.md  GITHUB_MIGRATION_PLAN.md  GOAL_MODE_NEXT_WINDOW_2026-05-25.md  IAN_BASELINE_PROTOCOL_REFERENCE.md  LEGACY_NAME_MAPPING.md  MENTOR_CLEAN_V1_PROTOCOL_LOCK_2026-05-30.md  MODEL_FAMILY_SCREENING_PROTOCOL_2026-06-04.md  NOTEBOOK05_LIGHTGBM_TUNING_PROTOCOL_2026-06-04.md  NOTEBOOK06_SELECTIVE_NO_TRADE_CALIBRATION_PROTOCOL_2026-06-05.md  NOTEBOOK06_SELECTIVE_NO_TRADE_TECHNICAL_DESIGN_2026-06-05.md  NOTEBOOK07_VALIDATION_SYNTHESIS_AND_GAP_AUDIT_TECHNICAL_DESIGN_2026-06-06.md  NOTEBOOK08_DEEP_SEQUENCE_EXPLORATION_FREEZE_READOUT_TECHNICAL_DESIGN_2026-06-06.md  NOTEBOOK08_RESUME_GATES.md  PAPER_GOAL_CLAIM_MAP_2026-05-25.md  PAPER_INNOVATION_CARDS_2026-05-25.md  PAPER_INNOVATION_ROADMAP_2026-05-25.md  PAPER_RESULTS_NARRATIVE_DRAFT_2026-05-25.md  PHASE_1B_BASELINE_RERUN_PLAN.md  (+45 more)
(+274 files in other folders)
