[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday_stock_direction_research"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
deep = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["intraday_research*"]
